--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -19,7 +19,7 @@
 
 <body onload="initialSetup()">
     <section id="section">
-        <div id = "testAnswersPopup" class = "input-block">
+        <div id = "testAnswersPopup" class = "input-block noselect">
 
             <div id = "popupHeader">
                 <div id = "headerText">
@@ -67,7 +67,7 @@
         </div>
 
 
-        <div id = "homeworkPopup" class = "input-block">
+        <div id = "homeworkPopup" class = "input-block noselect">
 
             <div id = "homeworkPopupHeader">
                 <div id = "homeworkHeaderText">
@@ -81,19 +81,19 @@
             </div>
 
             <div class = "input-row-center">
-                <button class = "button" onclick="">
+                <button class = "button" onclick="setHomeworkStatus('Assigned')">
                     Completed, but forgot
                 </button>
             </div>
 
             <div class = "input-row-center">
-                <button class = "button" onclick="">
+                <button class = "button" onclick="setHomeworkStatus('Incomplete', 'True')">
                     Didn't do + Grade
                 </button>
             </div>
 
             <div class = "input-row-center">
-                <button class = "button" onclick="">
+                <button class = "button" onclick="setHomeworkStatus('Incomplete')">
                     Didn't do
                 </button>
             </div>
