--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -66,8 +66,8 @@
 
         </div>
 
-        <!--<h2 id="studentName" style="color: white;"></h2>
-        <p style="color: white;">We would love your feedback!</p><br>
+        <h2 id="studentName" style="color: white;"></h2>
+        <!--<p ="color: white;">We would love your feedback!</p><br>
         <p style="color: white;">Please include any suggestions and your<br>name so we can get back to you with any questions</p>
         <textarea id="feedback" style="width: 300px; height: 200px;"></textarea>-->
 
