--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -14,6 +14,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-functions.js"></script>
     <script src="../../Site Templates/site-wide.js" defer></script>
     <script src="Daily Log.js" defer></script>
+    <script src="Lessons.js" defer></script>
 </head>
 
 
@@ -755,7 +756,7 @@
                     A
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="english-parts_of_speech" class = "gridBox button2">
                 </div>
 
 
@@ -767,7 +768,7 @@
                     A
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="english-subject_verb_and_noun_agreement" class = "gridBox button2">
                 </div>
 
 
@@ -779,7 +780,7 @@
                     A
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="english-sentence_structure" class = "gridBox button2">
                 </div>
 
 
@@ -791,7 +792,7 @@
                     A
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="english-punctuation" class = "gridBox button2">
                 </div>
 
 
@@ -803,7 +804,7 @@
                     A
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="english-commas" class = "gridBox button2">
                 </div>
 
 
@@ -815,7 +816,7 @@
                     B
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="english-word_choice" class = "gridBox button2">
                 </div>
 
 
@@ -827,7 +828,7 @@
                     B
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="english-transition_words" class = "gridBox button2">
                 </div>
 
 
@@ -839,7 +840,7 @@
                     B
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="english-clear_and_concise" class = "gridBox button2">
                 </div>
 
 
@@ -851,7 +852,7 @@
                     C
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="english-organization" class = "gridBox button2">
                 </div>
 
 
@@ -863,7 +864,7 @@
                     C
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="english-style" class = "gridBox button2">
                 </div>
 
 
@@ -875,7 +876,7 @@
                     C
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="english-strategy" class = "gridBox button2">
                 </div>
 
             </div>
@@ -938,7 +939,7 @@
                     A
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="math-basic_equations" class = "gridBox button2">
                 </div>
 
 
@@ -950,7 +951,7 @@
                     A
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="math-fractions" class = "gridBox button2">
                 </div>
 
 
@@ -962,7 +963,7 @@
                     A
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="math-exponents" class = "gridBox button2">
                 </div>
 
 
@@ -974,7 +975,7 @@
                     A
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="math-absolute_value" class = "gridBox button2">
                 </div>
 
 
@@ -986,7 +987,7 @@
                     A
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="math-inequalities" class = "gridBox button2">
                 </div>
 
 
@@ -998,7 +999,7 @@
                     C
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="math-graph_trends" class = "gridBox button2">
                 </div>
 
 
@@ -1010,7 +1011,7 @@
                     A
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="math-line_slopes" class = "gridBox button2">
                 </div>
 
 
@@ -1022,7 +1023,7 @@
                     B
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="math-word_problems" class = "gridBox button2">
                 </div>
 
 
@@ -1034,7 +1035,7 @@
                     A
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="math-systems_of_equations" class = "gridBox button2">
                 </div>
 
 
@@ -1046,7 +1047,7 @@
                     A
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="math-simplifying_and_distributing" class = "gridBox button2">
                 </div>
 
 
@@ -1058,7 +1059,7 @@
                     C
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="math-multivariable_equations" class = "gridBox button2">
                 </div>
 
 
@@ -1070,7 +1071,7 @@
                     B
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="math-quadratics" class = "gridBox button2">
                 </div>
 
 
@@ -1082,7 +1083,7 @@
                     A
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="math-triangles" class = "gridBox button2">
                 </div>
 
 
@@ -1094,7 +1095,7 @@
                     A
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="math-area_perimeter_volume_surface_area" class = "gridBox button2">
                 </div>
 
 
@@ -1106,7 +1107,7 @@
                     A
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="math-circles" class = "gridBox button2">
                 </div>
 
 
@@ -1118,7 +1119,7 @@
                     A
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="math-angles" class = "gridBox button2">
                 </div>
 
 
@@ -1130,7 +1131,7 @@
                     B
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="math-functions" class = "gridBox button2">
                 </div>
 
 
@@ -1142,7 +1143,7 @@
                     C
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="math-logic_abstract" class = "gridBox button2">
                 </div>
 
 
@@ -1154,7 +1155,7 @@
                     B
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="math-distance_midpoint" class = "gridBox button2">
                 </div>
 
 
@@ -1166,7 +1167,7 @@
                     D
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="math-graph_attributes" class = "gridBox button2">
                 </div>
 
 
@@ -1178,7 +1179,7 @@
                     D
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="math-limits_asymptotes" class = "gridBox button2">
                 </div>
 
 
@@ -1190,7 +1191,7 @@
                     A
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="math-basic_trig" class = "gridBox button2">
                 </div>
 
 
@@ -1202,7 +1203,7 @@
                     D
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="math-advanced_trig" class = "gridBox button2">
                 </div>
 
 
@@ -1214,7 +1215,7 @@
                     C
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="math-complex_numbers" class = "gridBox button2">
                 </div>
 
 
@@ -1226,7 +1227,7 @@
                     B
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="math-matrices" class = "gridBox button2">
                 </div>
 
 
@@ -1238,7 +1239,7 @@
                     D
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="math-logs" class = "gridBox button2">
                 </div>
 
 
@@ -1250,7 +1251,7 @@
                     C
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="math-radicals" class = "gridBox button2">
                 </div>
 
 
@@ -1262,7 +1263,7 @@
                     D
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="math-sequences_series" class = "gridBox button2">
                 </div>
 
 
@@ -1274,7 +1275,7 @@
                     A
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="math-ratios_scales_percents" class = "gridBox button2">
                 </div>
 
 
@@ -1286,7 +1287,7 @@
                     A
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="math-mean_median_mode" class = "gridBox button2">
                 </div>
 
 
@@ -1298,7 +1299,7 @@
                     A
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="math-probability" class = "gridBox button2">
                 </div>
 
 
@@ -1310,7 +1311,7 @@
                     B
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="math-combinatorics" class = "gridBox button2">
                 </div>
 
 
@@ -1322,7 +1323,7 @@
                     A
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="math-definitions" class = "gridBox button2">
                 </div>
 
             </div>
@@ -1385,7 +1386,7 @@
                     A
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="reading-question_types" class = "gridBox button2">
                 </div>
 
 
@@ -1397,7 +1398,7 @@
                     A
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="reading-a_b_passages" class = "gridBox button2">
                 </div>
 
 
@@ -1409,7 +1410,7 @@
                     A
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="reading-scope" class = "gridBox button2">
                 </div>
 
 
@@ -1421,7 +1422,7 @@
                     A
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="reading-strategies" class = "gridBox button2">
                 </div>
 
 
@@ -1433,7 +1434,7 @@
                     A
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="reading-passage_types" class = "gridBox button2">
                 </div>
 
 
@@ -1445,7 +1446,7 @@
                     B
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="reading-essay_paragraph_organization" class = "gridBox button2">
                 </div>
 
 
@@ -1457,7 +1458,7 @@
                     B
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="reading-note_taking" class = "gridBox button2">
                 </div>
 
             </div>
@@ -1520,7 +1521,7 @@
                     A
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="science-graph_reading" class = "gridBox button2">
                 </div>
 
 
@@ -1532,7 +1533,7 @@
                     A
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="science-variable_relationships" class = "gridBox button2">
                 </div>
 
 
@@ -1544,7 +1545,7 @@
                     A
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="science-extrapolation" class = "gridBox button2">
                 </div>
 
 
@@ -1556,7 +1557,7 @@
                     A
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="science-consistency" class = "gridBox button2">
                 </div>
 
 
@@ -1568,7 +1569,7 @@
                     B
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="science-variable_types" class = "gridBox button2">
                 </div>
 
 
@@ -1580,7 +1581,7 @@
                     B
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="science-experimental_design" class = "gridBox button2">
                 </div>
 
 
@@ -1592,7 +1593,7 @@
                     B
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="science-purpose" class = "gridBox button2">
                 </div>
 
 
@@ -1604,7 +1605,7 @@
                     C
                 </div>
 
-                <div class = "gridBox button2">
+                <div id="science-conflicting_viewpoints" class = "gridBox button2">
                 </div>
 
             </div>
