--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -18,7 +18,7 @@
 </head>
 
 
-<body onload="initialSetup()">
+<body>
     <section id="section">
         <div id = "testAnswersPopup" class = "input-block noselect">
 
