--- a/public/student-info-test.html
+++ b/public/student-info-test.html
@@ -13,7 +13,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-functions.js"></script>
-    <script src="public/Site Templates/site-wide.js" defer></script>
+    <script src="Site Templates/site-wide.js" defer></script>
     <script src="student-info-test.js" defer></script>
 </head>
 
