--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -38,8 +38,8 @@
                     </div>
                 </div>
 
-                <div id = "passage">
-                </div>
+                    <div id = "passage">
+                    </div>
 
                 <div class = "side">
                     <div class = "circle button2" onclick="nextPassage(this)">
@@ -51,6 +51,89 @@
 
             </div>
 
+            <div id = "timingBlock" class="input-row-center">
+                <label for="time" class="label">Time:</label>
+                <select id = "time-minutes">
+                    <option value = "0">Minutes</option>
+                    <option value = "1">1</option>
+                    <option value = "2">2</option>
+                    <option value = "3">3</option>
+                    <option value = "4">4</option>
+                    <option value = "5">5</option>
+                    <option value = "6">6</option>
+                    <option value = "7">7</option>
+                    <option value = "8">8</option>
+                    <option value = "9">9</option>
+                    <option value = "10">10</option>
+                    <option value = "11">11</option>
+                    <option value = "12">12</option>
+                    <option value = "13">13</option>
+                    <option value = "14">14</option>
+                    <option value = "15">15</option>
+                    <option value = "16">16</option>
+                    <option value = "17">17</option>
+                    <option value = "18">18</option>
+                    <option value = "19">19</option>
+                    <option value = "20">20</option>
+                </select>
+
+                <select id = "time-seconds">
+                    <option value = "0">Seconds</option>
+                    <option value = "1">1</option>
+                    <option value = "2">2</option>
+                    <option value = "3">3</option>
+                    <option value = "4">4</option>
+                    <option value = "5">5</option>
+                    <option value = "6">6</option>
+                    <option value = "7">7</option>
+                    <option value = "8">8</option>
+                    <option value = "9">9</option>
+                    <option value = "10">10</option>
+                    <option value = "11">11</option>
+                    <option value = "12">12</option>
+                    <option value = "13">13</option>
+                    <option value = "14">14</option>
+                    <option value = "15">15</option>
+                    <option value = "16">16</option>
+                    <option value = "17">17</option>
+                    <option value = "18">18</option>
+                    <option value = "19">19</option>
+                    <option value = "20">20</option>
+                    <option value = "30">30</option>
+                    <option value = "31">31</option>
+                    <option value = "32">32</option>
+                    <option value = "33">33</option>
+                    <option value = "34">34</option>
+                    <option value = "35">35</option>
+                    <option value = "36">36</option>
+                    <option value = "37">37</option>
+                    <option value = "38">38</option>
+                    <option value = "39">39</option>
+                    <option value = "40">40</option>
+                    <option value = "41">41</option>
+                    <option value = "42">42</option>
+                    <option value = "43">43</option>
+                    <option value = "44">44</option>
+                    <option value = "45">45</option>
+                    <option value = "46">46</option>
+                    <option value = "47">47</option>
+                    <option value = "48">48</option>
+                    <option value = "49">49</option>
+                    <option value = "50">50</option>
+                    <option value = "51">51</option>
+                    <option value = "52">52</option>
+                    <option value = "53">53</option>
+                    <option value = "54">54</option>
+                    <option value = "55">55</option>
+                    <option value = "56">56</option>
+                    <option value = "57">57</option>
+                    <option value = "58">58</option>
+                    <option value = "59">59</option>
+                    <option value = "60">60</option>
+                </select>
+            </div>
+
+
             <div id = "popupButtons" class = "input-row-center">
                 <button class = "smallButton button" onclick="openForm()">
                     Back
@@ -58,9 +141,9 @@
                 <button class = "smallButton button" onclick="resetAnswers()">
                     Reset
                 </button>
-                <!--<button class = "smallButton button" onclick="removePassage()">
+                <button class = "smallButton button" onclick="removePassage()">
                     Remove
-                </button>-->
+                </button>
                 <button class = "smallButton button" onclick="submitAnswersPopup()">
                     Submit
                 </button>
