update tutor beta message

--- a/public/Dashboard/Tutor.html
+++ b/public/Dashboard/Tutor.html
@@ -30,7 +30,7 @@
             <option disabled selected>Choose a student</option>
           </select>
           <h4>Beta Update:</h4>
-          <p>The section taught, time, and section notes are being saved!</p>
+          <p>Everything should be up and running for the daily log!</p>
         </div>
       </div>
     </section>
