Even more good stuff

--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -172,19 +172,19 @@
 
             <div class = "input-row-center">
                 <button class = "green button" onclick="setHomeworkStatus('in-time', 'True')">
-                    Completed, IT
+                    Completed, <span class = "smallerText">(in-time)</span>
                 </button>
             </div>
 
             <div class = "input-row-center">
                 <button class = "greenShade button" onclick="setHomeworkStatus('over-time', 'True')">
-                    Completed, OT
+                    Completed, <span class = "smallerText">(over-time)</span>
                 </button>
             </div>
 
             <div class = "input-row-center">
                 <button class = "greenShade button" onclick="setHomeworkStatus('not-timed', 'True')">
-                    Completed, NT
+                    Completed, <span class = "smallerText">(not-timed)</span>
                 </button>
             </div>
 
@@ -195,14 +195,14 @@
             </div>
 
             <div class = "input-row-center">
-                <button class = "orange button" onclick="setHomeworkStatus('forgot')">
-                    Completed, but forgot
+                <button class = "red button" onclick="setHomeworkStatus('in-center', 'True')">
+                    Completed, <span class = "smallerText">(in-center)</span>
                 </button>
             </div>
 
             <div class = "input-row-center">
-                <button class = "red button" onclick="setHomeworkStatus('in-center', 'True')">
-                    Didn't do + Grade
+                <button class = "orange button" onclick="setHomeworkStatus('forgot')">
+                    Completed, but forgot
                 </button>
             </div>
 
