--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -24,6 +24,11 @@
 <body>
     <section id="section">
 
+        <!--<div id = "sideNav">
+            <div id = "dailyLogNav" class = "button2" onclick = "openForm('dailyLog')">Daily Log</div>
+
+        </div>-->
+
         <div id = "testAnswersPopup" class = "metaForm noselect">
 
             <div id = "answersPopupHeader" class="heading-block">
