--- a/public/student-info-test.html
+++ b/public/student-info-test.html
@@ -24,19 +24,19 @@
   <div class="flex-row">
     <h1 id="student-name"></h1>
     <div class="flex-row">
-      <div class="score-box">
+      <div class="score-box composite">
         <p id="composite-score">TEST</p>
       </div>
-      <div class="score-box">
+      <div class="score-box english">
         <p id="english-score">TEST</p>
       </div>
-      <div class="score-box">
+      <div class="score-box math">
         <p id="math-score">TEST</p>
       </div>
-      <div class="score-box">
+      <div class="score-box reading">
         <p id="reading-score">TEST</p>
       </div>
-      <div class="score-box">
+      <div class="score-box science">
         <p id="science-score">TEST</p>
       </div>
     </div>
