user validation and sign out

--- a/public/Dashboard/Admin.html
+++ b/public/Dashboard/Admin.html
@@ -82,6 +82,7 @@
       
       <button class="button" onclick="goToInquiry()">Inquiry</button>
       <button class="button" onclick="popUpTutor()">Add Tutor</button>
+      <button class="button" onclick="signOut()">Sign Out</button>
 
     </section>
   </body>
