--- a/public/Dashboard/Tutor.html
+++ b/public/Dashboard/Tutor.html
@@ -29,8 +29,10 @@
           <select id="activeStudents" name="active-students" onchange="activeStudentSelected(this)">
             <option disabled selected>Choose a student</option>
           </select>
+          <button class="button" onclick="resetPassword()">reset password</button>
           <h4>Beta Update:</h4>
           <p>Everything should be up and running for the daily log!</p>
+          <button class="button" onclick="signOut()">Sign Out</button>
         </div>
       </div>
     </section>
