--- a/public/Dashboard/Student.html
+++ b/public/Dashboard/Student.html
@@ -19,6 +19,7 @@
 
   <body style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
     <h2 style="color: #110D65;">I'm confused ... How did you get here?</h2>
+    <button class="button" onclick="signOut()">Sign Out</button>
 
   </body>
 </html>
