--- a/public/Forms/New Student/New Student Form.html
+++ b/public/Forms/New Student/New Student Form.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Student</title>
     <link href="New Student.css" rel="stylesheet"></link>
+    <link href="../../Site Templates/site-wide.css" rel="stylesheet">
+
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-auth.js"></script>
@@ -18,6 +20,9 @@
 </head>
 
 <body onload = "fillInData()">
+    <section id="loading-screen">
+        <div class="loading-ring"></div>
+    </section>
     <section id = "section">
         <div id = "parentForm" class="registration-block">
             <div class="heading-block">
