--- a/public/Dashboard/Admin.html
+++ b/public/Dashboard/Admin.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Admin Dash</title>
     <link href="Admin.css" rel="stylesheet">
+    <link href="../Site Templates/site-wide.css" rel="stylesheet">
 
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-analytics.js"></script>
@@ -18,6 +19,9 @@
   </head>
 
   <body>
+    <section id="loading-screen">
+      <div class="loading-ring"></div>
+    </section>
     <section id="add-tutor-section">
       <div id="add-tutor-div" class="registration-block">
         <div class="heading-block">
