--- a/public/Dashboard/Dev.html
+++ b/public/Dashboard/Dev.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Dev Dash</title>
     <link href="Dev.css" rel="stylesheet">
+    <link href="../Site Templates/site-wide.css" rel="stylesheet">
 
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-analytics.js"></script>
@@ -18,5 +19,8 @@
   </head>
 
   <body>
+    <section id="loading-screen">
+      <div class="loading-ring"></div>
+    </section>
   </body>
 </html>
