--- a/public/Dashboard/Parent.html
+++ b/public/Dashboard/Parent.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Student Dash</title>
     <link href="Parent.css" rel="stylesheet">
+    <link href="../Site Templates/site-wide.css" rel="stylesheet">
 
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-analytics.js"></script>
@@ -18,6 +19,9 @@
   </head>
 
   <body style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
+    <section id="loading-screen">
+      <div class="loading-ring"></div>
+    </section>
     <h2 style="color: #110D65;">I'm confused ... How did you get here?</h2>
     <button class="button" onclick="signOut()">Sign Out</button>
 
