--- a/public/Dashboard/Tutor.html
+++ b/public/Dashboard/Tutor.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tutor Dash</title>
     <link href="Tutor.css" rel="stylesheet">
+    <link href="../Site Templates/site-wide.css" rel="stylesheet">
 
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-analytics.js"></script>
@@ -18,6 +19,9 @@
   </head>
 
   <body>
+    <section id="loading-screen">
+      <div class="loading-ring"></div>
+    </section>
     <section>
       <div class="header">
         <h2 id="locationName"></h2>
