--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daily Log</title>
     <link href="Daily Log.css" rel="stylesheet">
-    </link>
+    <link href="../../Site Templates/site-wide.css" rel="stylesheet">
+
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-auth.js"></script>
@@ -21,6 +22,9 @@
 
 
 <body>
+    <section id="loading-screen">
+        <div class="loading-ring"></div>
+    </section>
     <section id="section">
 
         <div id = "testAnswersPopup" class = "metaForm noselect">
