--- a/public/inquiry.html
+++ b/public/inquiry.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Inquiry</title>
     <link href="inquiry.css" rel="stylesheet">
+    <link href="Site Templates/site-wide.css" rel="stylesheet">
 
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-analytics.js"></script>
@@ -17,6 +18,9 @@
 
 
   <body onload="setLocations()">
+    <section id="loading-screen">
+      <div class="loading-ring"></div>
+    </section>
     <section id="section">
       <div id = "inquiryForm" class="registration-block">
         <div class="heading-block">
