--- a/public/student-info-test.html
+++ b/public/student-info-test.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TESTING</title>
   <link href="student-info-test.css" rel="stylesheet">
+  <link href="Site Templates/site-wide.css" rel="stylesheet">
   </link>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@3.0.2/dist/chart.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/moment@2.27.0"></script>
@@ -21,6 +22,9 @@
 
 
 <body>
+  <section id="loading-screen">
+    <div class="loading-ring"></div>
+  </section>
   <div class="flex-row">
     <h1 id="student-name"></h1>
     <div class="flex-row">
