--- a/public/student-info-test.html
+++ b/public/student-info-test.html
@@ -45,7 +45,11 @@
       </div>
     </div>
   </div>
+  <div class="flex-column justify-center">
+    <div class="flex-row">
+      <button class="button" onclick="setSessionAxis()">Sessions</button>
+      <button class="button" onclick="setHourAxis()">Hours</button>
+    </div>
+  </div>
   <canvas id="hw-canvas"></canvas>
-  <button onclick="setSessionAxis()">Sessions</button>
-  <button onclick="setHourAxis()">Hours</button>
 </body>
