guessing + partially complete test + other items

--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -198,6 +198,12 @@
                 </button>
             </div>
 
+            <div class = "input-row-center">
+                <button class = "greenShade button" onclick="setHomeworkStatus('previously completed')">
+                    Mark as Completed
+                </button>
+            </div>
+
             <br>
 
             <div class = "input-row-center">
@@ -248,14 +254,6 @@
             </div>
 
             <div id = "inCenterStatusDiv" class = "input-row-center">
-
-                <button class = "button">
-                    First Session
-                </button>
-
-                <button class = "button">
-                    Took Test
-                </button>
 
             </div>
 
@@ -443,14 +441,6 @@
 
             <div id = "homeworkStatusDiv" class = "input-row-center">
 
-                <button class = "button">
-                    First Session
-                </button>
-
-                <button class = "button">
-                    Took Test
-                </button>
-
             </div>
 
             <div class = "testHeaders">
@@ -637,14 +627,6 @@
             </div>
 
             <div id = "otherStatusDiv" class = "input-row-center">
-
-                <button class = "button">
-                    First Session
-                </button>
-
-                <button class = "button">
-                    Took Test
-                </button>
 
             </div>
 
